--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
   <title>Password Generator</title>
 </head>
 <body>
-  <main class="main">
+  <main class="main wrapper">
     <header class="header">
-        <img src="./images/logo-pass-generator.svg" alt="Logo Password Generator">
-      </header>
-      <section class="content">
-        <h1>Password Generator</h1>
-      </section>
+      <img src="./images/logo-pass-generator.svg" alt="Logo Password Generator">
+    </header>
+    <section class="content">
+      <h1>Password Generator</h1>
+    </section>
   </main>
-  <footer class="footer"></footer>
+  <footer class="footer">
+    <div class="wrapper">
+      <p>© 2021. All rights reserved.Project by <a href="https://alexdciant.com" target="_blank">Alex Dicant.</a></p>
+    </div>
+  </footer>
 </body>
 </html>
