--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       </header>
       <section class="main-content">
         <h1>Password Generator</h1>
+        <section class="main-content-generator">
+          <div class="main-content-generator_box">
+            <p>c{$!vz(-YSLHiiSw;]((I_%k$</p>
+          </div>
+        </section>
       </section>
     </main>
     <footer class="footer">
