ADD - Add new layout for pass generator box

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
       </header>
       <section class="main-content">
         <h1>Password Generator</h1>
-        <section class="main-content-generator">
-          <div class="main-content-generator_box">
+        <div class="main-content__pass">
+          <div class="main-content__pass-box">
             <p>c{$!vz(-YSLHiiSw;]((I_%k$</p>
           </div>
-        </section>
+          <button class="button-square">R</button>
+          <button class="button-square">C</button>
+        </div>
       </section>
     </main>
     <footer class="footer">
