--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <img src="./images/copy-icon.svg" alt="Copy icon">
           </button>
         </div>
+        <input type="range" class="styled-slider slider-progress">
       </section>
     </main>
     <footer class="footer">
@@ -45,5 +46,6 @@
         </p>
       </div>
     </footer>
+    <script src="./js/range-input.js"></script>
   </body>
 </html>
