Change BEM - Change header

--- a/index.html
+++ b/index.html
@@ -16,26 +16,27 @@
   </head>
   <body>
     <main class="main wrapper">
-      <header class="main-header">
+      <header class="header">
         <img
+          class="header__image"
           src="./images/logo-pass-generator.svg"
           alt="Logo Password Generator"
         />
       </header>
-      <section class="main-content">
-        <h1>Password Generator</h1>
+      <section class="content">
+        <h1 class="content__title">Password Generator</h1>
         <div class="main-content__pass">
           <div class="main-content__pass-box">
             <p>c{$!vz(-YSLHiiSw;]((I_%k$</p>
           </div>
           <button class="button-square">
-            <img src="/images/reload-icon.svg" alt="Reload icon">
+            <img src="/images/reload-icon.svg" alt="Reload icon" />
           </button>
           <button class="button-square">
-            <img src="./images/copy-icon.svg" alt="Copy icon">
+            <img src="./images/copy-icon.svg" alt="Copy icon" />
           </button>
         </div>
-        <input type="range" class="styled-slider slider-progress">
+        <input type="range" class="styled-slider slider-progress" />
       </section>
     </main>
     <footer class="footer">
