--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       </header>
       <section class="content">
         <h1 class="content__title">Password Generator</h1>
-        <div class="main-content__pass">
-          <div class="main-content__pass-box">
+        <div class="content__pass">
+          <div class="content__pass-box">
             <p>c{$!vz(-YSLHiiSw;]((I_%k$</p>
           </div>
           <button class="button-square">
