Change BEM - Change button

--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
             <p>c{$!vz(-YSLHiiSw;]((I_%k$</p>
           </div>
           <button class="button-square">
-            <img src="/images/reload-icon.svg" alt="Reload icon" />
+            <img
+              class="button-square__icon"
+              src="/images/reload-icon.svg"
+              alt="Reload icon"
+            />
           </button>
           <button class="button-square">
-            <img src="./images/copy-icon.svg" alt="Copy icon" />
+            <img
+              class="button-square__icon"
+              src="./images/copy-icon.svg"
+              alt="Copy icon"
+            />
           </button>
         </div>
         <input type="range" class="styled-slider slider-progress" />
