Change BEM - Change footer

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
       <div class="wrapper">
         <p>
           © 2021. All rights reserved. Project by
-          <a href="https://alexdciant.com" target="_blank">Alex Dicant.</a>
+          <a class="footer__linck" href="https://alexdciant.com" target="_blank"
+            >Alex Dicant.</a
+          >
         </p>
       </div>
     </footer>
