Togle button init

--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
           </button>
         </div>
         <input type="range" class="styled-slider slider-progress" />
+        <section class="checkboxs">
+          <div class="checkboxs__ABC">
+            <input class="checkbox-button" type="checkbox" id="example" />
+            <label for="example" class="toggle">
+              <div class="slider"></div>
+            </label>
+            <span class="checkboxs-numbers-title">ABC</span>
+          </div>
+          <div class="checkboxs__abc">
+            <input class="checkbox-button" type="checkbox" id="example" />
+            <label for="example" class="toggle">
+              <div class="slider"></div>
+            </label>
+            <span class="checkboxs-numbers-title">abc</span>
+          </div>
+        </section>
       </section>
     </main>
     <footer class="footer">
