Separate css file

--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
           </button>
         </div>
         <input type="range" class="styled-slider slider-progress" />
-        <section class="checkboxs">
+        <section class="checkboxs-section">
           <div class="checkboxs__ABC">
-            <input class="checkbox-button" type="checkbox" id="example" />
-            <label for="example" class="toggle">
+            <input class="checkbox-button" type="checkbox" id="inputABC" />
+            <label for="inputABC" class="toggle">
               <div class="slider"></div>
             </label>
             <span class="checkboxs-numbers-title">ABC</span>
           </div>
           <div class="checkboxs__abc">
-            <input class="checkbox-button" type="checkbox" id="example" />
-            <label for="example" class="toggle">
+            <input class="checkbox-button" type="checkbox" id="inputabc" />
+            <label for="inputabc" class="toggle">
               <div class="slider"></div>
             </label>
             <span class="checkboxs-numbers-title">abc</span>
