BEM to ckeckbox

--- a/index.html
+++ b/index.html
@@ -46,19 +46,14 @@
         </div>
         <input type="range" class="styled-slider slider-progress" />
         <section class="checkboxs-section">
-          <div class="checkboxs__ABC">
-            <input class="checkbox-button" type="checkbox" id="inputABC" />
-            <label for="inputABC" class="toggle">
-              <div class="slider"></div>
+          <div class="checkboxs-box">
+            <!-- TODO: boton -->
+            <input class="checkbox" type="checkbox" id="inputABC" />
+            <label for="inputABC" class="checkbox__toggle">
+              <div class="checkbox__slider"></div>
             </label>
+            <!-- TODO: boton -->
             <span class="checkboxs-numbers-title">ABC</span>
-          </div>
-          <div class="checkboxs__abc">
-            <input class="checkbox-button" type="checkbox" id="inputabc" />
-            <label for="inputabc" class="toggle">
-              <div class="slider"></div>
-            </label>
-            <span class="checkboxs-numbers-title">abc</span>
           </div>
         </section>
       </section>
