BEM to ckeckbox ended

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <label for="inputABC" class="checkbox__toggle">
               <div class="checkbox__slider"></div>
             </label>
+            <span class="checkboxs__title">ABC</span>
             <!-- TODO: boton -->
-            <span class="checkboxs-numbers-title">ABC</span>
           </div>
         </section>
       </section>
